Manifestos/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  namespace: giropops
spec:
  selector:
    app: giropops-senhas
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  type: ClusterIP
