Manifestos/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas-grafana
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
