Manifestos/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: giropops
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
