Manifestos/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress
  namespace: giropops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.k0dy.pro
    http:
      paths:
      - path: /       
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
