Manifestos/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress-grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - giropops.k0dy.pro
    secretName: giropops-senhas-tls
  ingressClassName: nginx
  rules:
  - host: giropops.k0dy.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas-grafana
            port:
              number: 3000
