Manifestos/kyverno-disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: no-root-user
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "O uso de usuário root não é permitido."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - securityContext:
              runAsNonRoot: true
